[metadata]
name = qhub-catalog
author = "quansight"
url = https://github.com/Quansight/qhub-catalog
description = a catalog of data for exploring qhub
long_description = file: README.md
long_description_type = text/markdown
license = BSD 3-Clause License

[options]
zip_safe = False
include_package_data = True
install_requires =
    intake
packages=find:

[options.extras_require]
test =
    nbval
    pytest-sugar

[options.packages.find]
where = 

[options.entry_points]
console_scripts =
    pidgy = pidgy.__main__:main

[tool:pytest]
norecursedirs = _build .nox .ipynb_checkpoints
